# Heimdall

./: .gitignore  Dockerfile  LICENCE  README.md  admin_console.py  agent.py  authorized_techs.json  ddos_attack_sim.py  docker-compose.yml  engine.py  hyper_load_test.py  multi_service_test.py  pyproject.toml  simulator.py  stress_pro.py  stress_test.py  test_heimdall.py  test_system.py  video_demo.py  warmup.py
sentinela-core/scripts/: init.sql
src/: config.py
src/app/: main.py
src/core/entities/: metric.py
src/core/interfaces/: repositories.py
src/core/services/: detector_service.py
src/domain/: anomaly_detector.py
src/infrastructure/: grpc_server.py
src/infrastructure/database/: config.py  models.py  repository.py
src/infrastructure/proto/: metrics.proto  metrics_grpc.py  metrics_pb2.py
tests/integration/: test_pipeline.py
